# chessbot

./: .gitignore  README.md  pyproject.toml
chessbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
chessbot/chess/: utils.py
chessbot/config/: default.yaml
chessbot/interfaces/: agent.py  cli.py  uci.py
chessbot/mcts/: __init__.py  evaluator.py  node.py  search.py
chessbot/nn/: encode.py  losses.py  model.py  optim.py
chessbot/selfplay/: buffer.py  dataset.py  generate.py
chessbot/train/: checkpoints.py  eval.py  logging.py  train.py
scripts/: auto_loop.py  eval_material.py  eval_random.py  play.py  selfplay.py  train.py  uci_engine.py
tests/: test_chess_utils.py  test_encode.py  test_mcts.py  test_replay_buffer.py  test_smoke_train.py
